--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -2348,7 +2348,7 @@
     
                       <div *ngIf="d.login_by === 'email'">
                         <div class="label-text">
-                          Email1&nbsp;<span class="required-title">*</span>
+                          Email&nbsp;<span class="required-title">*</span>
                         </div>
                         <div class="input-data">
                           <input class="content-input hover-item" type="text" placeholder="{{ 'nhap_email' | translate }}" [(ngModel)]="d.email" />
