--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -107,3 +107,44 @@ textarea::after {
   justify-content: center;
   align-items: center;
 }
+
+.content-item {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.item-left, .item-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.item-left {
+  background-color: #C7E8FA !important;
+}
+
+.item-right {
+  background-color: #E6EDFA !important;
+}
+
+.item img {
+  max-width: 100%; /* Đặt kích thước ảnh phù hợp */
+}
+
+.font-sign {
+  font-size: 6px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #286CF5;
+}
